Fixed "Line-height too high on labels" by @a.hover .See #2357795

--- a/css/style.css
+++ b/css/style.css
@@ -658,6 +658,7 @@ fieldset legend {
  */
 .form-item {
   padding: 0 1em 0 0;
+  margin-bottom: 1em;
 }
 
 .filter-wrapper .form-item,div.teaser-checkbox .form-item,.form-item .form-item {
@@ -680,8 +681,12 @@ fieldset legend {
   font-weight: 300;
   margin: 0;
   margin: 0 0 10px;
-  line-height: 40px;
+  line-height: 1.4;
   width: initial;
+}
+
+.exposed-filters .form-item label {
+  line-height: 40px;
 }
 
 .form-item label.option {
